# ftd2xx-logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README
src/: dllmain.cpp  logger.cpp  logger.h
tools/: dumpbin.py  dumpbin_parser.py  generate.py  header_parser.py  model.py  validator.py
tools/renderer/: common.py  def_file.py  loader_cpp.py  loader_h.py  proxy_cpp.py
